--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -10,6 +10,7 @@
             "request": "launch",
             "program": "app.py",
             "console": "integratedTerminal",
+            "justMyCode": false,
             "env": {
                 "GEVENT_SUPPORT": "True"
             }
