--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ http_ece==1.2.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+lgpio==0.2.2.0; platform_system =="Linux"
 MarkupSafe==3.0.2
 multidict==6.1.0
 numpy==2.1.3
@@ -51,6 +52,8 @@ pytz==2024.2
 pyusb==1.2.1
 pywebpush==2.0.3
 requests==2.32.3
+rpi-lgpio==0.6; platform_system =="Linux"
+rpi_ws281x==5.0.0; platform_system =="Linux"
 ruamel.yaml==0.18.6
 setuptools==75.6.0
 simple-websocket==1.1.0
